--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,20 +1,43 @@
-/*APP COMPONENT RELATED CSS GOES HERE*/
+
+
 * {
-  background-color: #ACD0DD;
   font-family: monospace;
+  /*background-color: #ACD0DD;*/
+
 }
 
+
 .header {
-  font-size: 54px;
-  text-align: center;
+  font-family: cursive;
+  color: #390C28;
+  background-image:url("http://www.creativehdwallpapers.com/uploads/large/background/background-presentation-school-wallpapers.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 240px;
+  /*text-align: center;*/
+  font-size: 150px;
+  margin: auto 0 auto 0;
+  background-color: #ACD0DD;
+
 }
 
 .secondHeader {
+  color: #334855;
   font-size: 26px;
   text-align: center;
+  background-color: #A2BBC2;
+  margin: auto 0 auto 0;
+  padding-top: 20px;
+
 }
 
 .instructions {
+  color: #334855;
   font-size: 18px;
   text-align: center;
+  background-color: #A2BBC2;
+  margin: auto 0 auto 0;
+  padding: 20px 0 20px 0;
+
+
 }
