--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,3 +1,16 @@
 .card {
-  background-color: yellow;
+  color: #334855;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #555555;
+  border-radius: 5%;
+  box-shadow: 4px 4px 2px #555555;
+  width: 18%;
+  margin: 5px 5px 5px 5px;
+  background-color: #ACD0DD;
+}
+
+.card:hover {
+  background-color: #BABEA8;
 }
