--- a/src/Components/CardContainer/CardContainer.css
+++ b/src/Components/CardContainer/CardContainer.css
@@ -1,3 +1,7 @@
 .container{
-  border: 3px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: #A2BBC2;
+
 }
