--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,25 +1,18 @@
-
-
 * {
   font-family: monospace;
-  /*background-color: #ACD0DD;*/
-
-}
-
+  /*background-color: #ACD0DD;*/ }
 
 .header {
   font-family: cursive;
   color: #390C28;
-  background-image:url("http://www.creativehdwallpapers.com/uploads/large/background/background-presentation-school-wallpapers.jpg");
+  background-image: url("http://www.creativehdwallpapers.com/uploads/large/background/background-presentation-school-wallpapers.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 240px;
   /*text-align: center;*/
   font-size: 150px;
   margin: auto 0 auto 0;
-  background-color: #ACD0DD;
-
-}
+  background-color: #ACD0DD; }
 
 .secondHeader {
   color: #334855;
@@ -27,9 +20,7 @@
   text-align: center;
   background-color: #A2BBC2;
   margin: auto 0 auto 0;
-  padding-top: 20px;
-
-}
+  padding-top: 20px; }
 
 .instructions {
   color: #334855;
@@ -37,7 +28,4 @@
   text-align: center;
   background-color: #A2BBC2;
   margin: auto 0 auto 0;
-  padding: 20px 0 20px 0;
-
-
-}
+  padding: 20px 0 20px 0; }
