--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,11 +1,6 @@
-
-
 * {
   font-family: monospace;
-  /*background-color: #ACD0DD;*/
-}
-
-
+  /*background-color: #ACD0DD;*/ }
 
 .header {
   font-family: cursive;
@@ -17,9 +12,7 @@
   /*text-align: center;*/
   font-size: 150px;
   margin: auto 0 auto 0;
-  background-color: #ACD0DD;
-}
-
+  background-color: #ACD0DD; }
 
 .secondHeader {
   color: #334855;
@@ -27,8 +20,7 @@
   text-align: center;
   background-color: #A2BBC2;
   margin: auto 0 auto 0;
-  padding-top: 20px;
-}
+  padding-top: 20px; }
 
 .instructions {
   color: #334855;
@@ -36,6 +28,4 @@
   text-align: center;
   background-color: #A2BBC2;
   margin: auto 0 auto 0;
-  padding: 20px 0 20px 0;
-}
-
+  padding: 20px 0 20px 0; }
