skeleton for scss all set

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -1,9 +1,8 @@
-
+@import '../css/variables.scss';
 
 * {
   font-family: monospace;
-  /*background-color: #ACD0DD;*/
-
+  background-color: #ACD0DD;
 }
 
 
@@ -14,11 +13,10 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 240px;
-  /*text-align: center;*/
+  text-align: center;
   font-size: 150px;
   margin: auto 0 auto 0;
   background-color: #ACD0DD;
-
 }
 
 .secondHeader {
@@ -28,7 +26,6 @@
   background-color: #A2BBC2;
   margin: auto 0 auto 0;
   padding-top: 20px;
-
 }
 
 .instructions {
@@ -38,6 +35,4 @@
   background-color: #A2BBC2;
   margin: auto 0 auto 0;
   padding: 20px 0 20px 0;
-
-
 }
