--- a/src/Components/CardContainer/CardContainer.scss
+++ b/src/Components/CardContainer/CardContainer.scss
@@ -1,5 +1,6 @@
-.container {
+.container{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: #A2BBC2; }
+  background-color: #A2BBC2;
+}
