--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -8,7 +8,9 @@
   box-shadow: 4px 4px 2px #555555;
   width: 18%;
   margin: 5px 5px 5px 5px;
-  background-color: #ACD0DD; }
+  background-color: #ACD0DD;
+}
 
 .card:hover {
-  background-color: #BABEA8; }
+  background-color: #BABEA8;
+}
