--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -1,9 +1,11 @@
 .searchContainer {
   display: flex;
   justify-content: center;
-  background-color: #A2BBC2; }
+  background-color: #A2BBC2;
+}
 
 .search {
   height: 25px;
   width: 25%;
-  background-color: #BABEA8; }
+  background-color: #BABEA8;
+}
