--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -8,31 +8,29 @@
 
 .header {
   font-family: cursive;
-  color: #390C28;
+  color: $main-header-font-color;
   background-image:url("http://www.creativehdwallpapers.com/uploads/large/background/background-presentation-school-wallpapers.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 240px;
-  text-align: center;
   font-size: 150px;
   margin: auto 0 auto 0;
-  background-color: #ACD0DD;
 }
 
 .secondHeader {
-  color: #334855;
+  color: $main-font-color;
   font-size: 26px;
   text-align: center;
-  background-color: #A2BBC2;
+  background-color: $header-background-color;
   margin: auto 0 auto 0;
   padding-top: 20px;
 }
 
 .instructions {
-  color: #334855;
+  color: $main-font-color;
   font-size: 18px;
   text-align: center;
-  background-color: #A2BBC2;
+  background-color: $header-background-color;
   margin: auto 0 auto 0;
   padding: 20px 0 20px 0;
 }
