--- a/src/Components/css/variables.scss
+++ b/src/Components/css/variables.scss
@@ -1,6 +1,9 @@
-$main-font: "Ariel", "Helvetica", "Copperplate", sans-serif;
+
+$main-header-font-color: #390C28;
+$main-font-color: #334855;
 $text-or-border-color: #d42b16;
 $input-background-color: #feede3;
-$button-background-color: #eb8049;
+$header-background-color: #A2BBC2;
 $button-hover-color: #594666;
 $card-color: rgba(235, 128, 73, 0.5);
+$card-hover-color: #A2BBC2;
