--- a/src/Components/CardContainer/CardContainer.scss
+++ b/src/Components/CardContainer/CardContainer.scss
@@ -4,3 +4,9 @@
   justify-content: center;
   background-color: #A2BBC2;
 }
+
+
+.compare-container {
+  display: flex;
+  flex-direction: column;
+}
