--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,8 +1,6 @@
 * {
   font-family: monospace;
-  background-color: #ACD0DD; 
-}
-
+  background-color: #ACD0DD; }
 
 .header {
   font-family: cursive;
