--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,17 +1,23 @@
+ul {
+  list-style: none; }
+
 .card {
   color: #334855;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   border: 2px solid #555555;
   border-radius: 5%;
   box-shadow: 4px 4px 2px #555555;
-  width: 18%;
-  margin: 5px 5px 5px 5px;
+  width: 12%;
+  margin: 20px 20px 20px 20px;
   background-color: #ACD0DD; }
 
-.card:hover {
+.hover:hover {
   background-color: #A2BBC2; }
+  .hover:hover .hover {
+    background-color: #A2BBC2; }
 
 .card-title {
   font-size: 16px;
@@ -23,3 +29,12 @@
 .belowHalf {
   font-weight: lighter;
   color: #7D215D; }
+
+.clear-button {
+  width: 200px;
+  height: 50px;
+  box-shadow: 4px 4px 2px #555555;
+  border-radius: 25px;
+  background-color: #62BC27;
+  font-size: 16px;
+  font-weight: bold; }
