--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -1,21 +1,28 @@
 @import '../css/variables.scss';
 
+ul {
+  list-style: none;
+}
+
 .card {
   color: #334855;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   border: 2px solid #555555;
   border-radius: 5%;
   box-shadow: 4px 4px 2px #555555;
-  width: 18%;
-  margin: 5px 5px 5px 5px;
+  width: 12%;
+  margin: 20px 20px 20px 20px;
   background-color: #ACD0DD;
 }
 
-.card:hover {
+.hover:hover {
+  .hover{background-color: $card-hover-color;}
   background-color: $card-hover-color;
 }
+
 
 .card-title {
   font-size: 16px;
@@ -30,4 +37,18 @@
 .belowHalf {
   font-weight: lighter;
   color: #7D215D;
+}
+
+.clear-button {
+  width: 200px;
+  height: 50px;
+  box-shadow: 4px 4px 2px #555555;
+  border-radius: 25px;
+  background-color: #62BC27;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.compare-and-button {
+
 }
