--- a/src/Components/CardContainer/CardContainer.scss
+++ b/src/Components/CardContainer/CardContainer.scss
@@ -6,7 +6,14 @@
 }
 
 
-.compare-container {
+.compare-and-button {
   display: flex;
   flex-direction: column;
+  background-color: #A2BBC2;
+}
+
+.clear-button {
+  align-self: center;
+  margin: 30px 0px 80px 0px;
+
 }
