new style and color scheme added

--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -1,11 +1,12 @@
 .searchContainer {
   display: flex;
   justify-content: center;
-  background-color: #A2BBC2;
+  background-color: rgba(56, 78, 88, 0.96);
 }
 
 .search {
   height: 25px;
   width: 25%;
   background-color: #BABEA8;
+  margin-bottom: 40px;
 }
