--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -18,9 +18,14 @@ ul {
   background-color: #ACD0DD;
 }
 
+.card:hover{
+  cursor: pointer;
+}
+
 .hover:hover {
   .hover{background-color: $card-hover-color;}
   background-color: $card-hover-color;
+  cursor: pointer;
 }
 
 
@@ -32,20 +37,22 @@ ul {
 
 .aboveHalf {
   font-weight: bold;
+
 }
 
 .belowHalf {
   font-weight: lighter;
-  color: #7D215D;
+  color: $poop;
 }
 
 .clear-button {
-  width: 200px;
-  height: 50px;
-  box-shadow: 4px 4px 2px #555555;
+  width: 300px;
+  height: 70px;
   border-radius: 25px;
-  background-color: #62BC27;
-  font-size: 16px;
+  background-color: black;
+  border: none;
+  color: white;
+  font-size: 24px;
   font-weight: bold;
 }
 
