--- a/src/Components/CardContainer/CardContainer.scss
+++ b/src/Components/CardContainer/CardContainer.scss
@@ -2,18 +2,20 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: #A2BBC2;
+  background-color:  rgba(56, 78, 88, 0.96) ;
 }
 
 
 .compare-and-button {
   display: flex;
   flex-direction: column;
-  background-color: #A2BBC2;
+  background-color: #938D60;
 }
 
 .clear-button {
   align-self: center;
-  margin: 30px 0px 80px 0px;
+  margin: 30px 0px 40px 0px;
+  background-color: $poop;
+  font-family: serif;
 
 }
