--- a/src/Components/ComparisonCard/ComparisonCard.css
+++ b/src/Components/ComparisonCard/ComparisonCard.css
@@ -25,5 +25,5 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: #A2BBC2;
+  background-color: #938D60;
   margin-top: 40px; }
