--- a/src/Components/ComparisonCard/ComparisonCard.scss
+++ b/src/Components/ComparisonCard/ComparisonCard.scss
@@ -30,6 +30,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: $header-background-color;
+    background-color: #938D60;
     margin-top: 40px;
   }
