--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -1,9 +1,10 @@
 .searchContainer {
   display: flex;
   justify-content: center;
-  background-color: #A2BBC2; }
+  background-color: rgba(56, 78, 88, 0.96); }
 
 .search {
   height: 25px;
   width: 25%;
-  background-color: #BABEA8; }
+  background-color: #BABEA8;
+  margin-bottom: 40px; }
