--- a/src/Components/css/variables.scss
+++ b/src/Components/css/variables.scss
@@ -7,3 +7,5 @@ $header-background-color: #A2BBC2;
 $button-hover-color: #594666;
 $card-color: rgba(235, 128, 73, 0.5);
 $card-hover-color: #A2BBC2;
+
+$poop: #572F18;
