--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -54,3 +54,15 @@ ul {
   color: white;
   font-size: 24px;
   font-weight: bold; }
+
+@media only screen and (max-width: 1600px) {
+  .card {
+    width: 25%; } }
+
+@media only screen and (max-width: 1000px) {
+  .card {
+    width: 40%; } }
+
+@media only screen and (max-width: 700px) {
+  .card {
+    width: 60%; } }
