--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -69,5 +69,22 @@ ul {
 }
 
 .compare-and-button {
-
 }
+
+@media only screen and (max-width: 1600px) {
+    .card {
+        width: 25%;
+    }
+  }
+
+  @media only screen and (max-width: 1000px) {
+        .card {
+            width: 40%;
+        }
+      }
+
+  @media only screen and (max-width: 700px) {
+        .card {
+          width: 60%;
+            }
+          }
