add css styling to selected cards

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -14,7 +14,7 @@ ul {
   margin: 20px 20px 20px 20px;
   background-color: #ACD0DD; }
 
-.card:hover {
+.selected, .card:hover {
   cursor: pointer;
   border: 5px solid white; }
 
